# OVDS

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: astro.yml
docs/: astro.config.mjs  index.md
docs/model/: overview.md  powertrain.md
docs/schemas/: battery-pack.md  electric-motor.md  engine.md  group.md  make.md  platform.md  safety.md  transmission.md  vehicle.md
docs/versions/: v0.1.0.md  v0.1.md  v0.1.x.md  v0.2.x.md
examples/v0.1/: ev.json  hev.json  mhev.json  phev.json  series-hybrid.json
examples/v0.1.1/: ev.json  hev.json  mhev.json  phev.json  series-hybrid.json
examples/v0.1.2/: cng.json  diesel.json  mhev.json
examples/v0.2.0/: cng.json  diesel.json  ev.json  hev.json  invalid.json  mhev.json  phev.json  series-hybrid.json
scripts/: validate_schemas.py
spec/v0.1/: battery-pack.schema.json  electric-motor.schema.json  engine.schema.json  group.schema.json  make.schema.json  platform.schema.json  readme.md  safety.schema.json  transmission.schema.json  vehicle.schema.json
spec/v0.1.1/: battery-pack.schema.json  electric-motor.schema.json  engine.schema.json  group.schema.json  make.schema.json  platform.schema.json  readme.md  safety.schema.json  transmission.schema.json  vehicle.schema.json
spec/v0.1.2/: battery-pack.schema.json  electric-motor.schema.json  engine.schema.json  group.schema.json  make.schema.json  platform.schema.json  readme.md  safety.schema.json  transmission.schema.json  vehicle.schema.json
spec/v0.2.0/: battery-pack.schema.json  electric-motor.schema.json  engine.schema.json  group.schema.json  (+5 more)
(+24 files in other folders)
